Fixed z-index issue on mobile menu (kinda)

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,7 @@ header{
     font-size: 16px;
     align-items: center;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     
     flex-wrap: wrap
 }
@@ -190,7 +190,6 @@ nav ul{
 }
 
 .wrapMobMenuBtn{
-    display: inline-flex;
     align-items: center;
     display: none;
 }
@@ -199,6 +198,8 @@ nav ul{
     background-color: transparent;
     padding: 0;
     border: 0;
+    position: relative;
+    z-index: 6;
 }
 
 .menuClose{
@@ -206,36 +207,45 @@ nav ul{
     top: 4px;
 }
 
-.menuMobileWrapper{
-    background-color: #FFF;
+.menuMobileWrap{
     position: absolute;
-    top: 64px;
+    z-index: 2;
     width: 100%;
-    border-radius: 20px;
-    color: #1c3240;
-    padding: 32px;
-    text-align: center;
-    z-index: 200;
-}
-
-header .menuMobileWrapper nav{
-    max-width: 100%;
-    width: 100%;
-    display: block;
-    position: relative;
-    z-index: 200 !important;
-    padding: 32px;
-    background-color: red
-
-}
-
-header .menuMobileWrapper ul{
-    opacity: 200 !important;
-    left: 0;
+    background-color: #FFF;
     top: 0;
-    background-color: blue;
+    left: 0;
+    opacity: 1;
+    border-radius: 8px;
+    text-align: center;
+    top: 64px;
+    padding: 32px;
+}
+
+
+.menuMobileWrap nav{
+    display: block;
+    z-index: 2;
     position: relative;
 }
+
+.menuMobileWrap div{
+    font-size: 18x;
+    z-index: 3;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    color: #1c3240;
+    padding: 8px;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+
+.menuMobileWrap div:hover{
+    color: red;
+}
+
+
 
 .navSecondCol .whiteBtn,
 .whiteBtn,
